--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -24,8 +24,9 @@ jobs:
     name: Build extension binaries
     uses: ./.github/workflows/_extension_distribution.yml
     with:
-      duckdb_version: v1.1.1
-      ci_tools_version: main
+      duckdb_version: v1.1.3
+      ci_tools_version: minor-ci-tweaks
+      override_ci_tools_repository: samansmink/extension-ci-tools
       extension_name: rusty_quack
       extra_toolchains: rust;python3
       matrix_parse_script: "./extension-ci-tools/scripts/modify_distribution_matrix.py"
@@ -37,7 +38,7 @@ jobs:
     uses: ./.github/workflows/_extension_deploy.yml
     secrets: inherit
     with:
-      duckdb_version: v1.1.1
+      duckdb_version: v1.1.3
       extension_name: rusty_quack
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
       exclude_archs: 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_rtools'
