--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -41,4 +41,5 @@ jobs:
       duckdb_version: v1.1.3
       extension_name: rusty_quack
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
+      matrix_parse_script: "./extension-ci-tools/scripts/modify_distribution_matrix.py"
       exclude_archs: 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_rtools'
