--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -22,7 +22,7 @@ jobs:
 
   duckdb-stable-build:
     name: Build extension binaries
-    uses: ./.github/workflows/_extension_distribution.yml
+    uses: samansmink/extension-ci-tools/.github/workflows/_extension_distribution.yml@minor-ci-tweaks
     with:
       duckdb_version: v1.1.3
       ci_tools_version: minor-ci-tweaks
