--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -12,13 +12,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-
   duckdb-stable-build:
     name: Build extension binaries
-    uses: samansmink/extension-ci-tools/.github/workflows/_extension_distribution.yml@minor-ci-tweaks
+    uses: samansmink/extension-ci-tools/.github/workflows/_extension_distribution.yml@minor-scipt-additions
     with:
       duckdb_version: v1.1.3
-      ci_tools_version: minor-ci-tweaks
+      ci_tools_version: minor-scipt-additions
       override_ci_tools_repository: samansmink/extension-ci-tools
       extension_name: rusty_quack
       extra_toolchains: rust;python3
