--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -14,10 +14,10 @@ concurrency:
 jobs:
   duckdb-stable-build:
     name: Build extension binaries
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.2.0
     with:
-      duckdb_version: v1.1.3
+      duckdb_version: v1.2.0
       ci_tools_version: main
       extension_name: rusty_quack
       extra_toolchains: rust;python3
-      exclude_archs: 'windows_amd64_rtools'
+      exclude_archs: 'windows_amd64_rtools;windows_amd64_mingw'
