--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -20,4 +20,4 @@ jobs:
       ci_tools_version: main
       extension_name: rusty_quack
       extra_toolchains: rust;python3
-      exclude_archs: 'windows_amd64_rtools;windows_amd64_mingw'
+      exclude_archs: 'windows_amd64_rtools;windows_amd64_mingw;linux_amd64_musl'
