--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "rusty_quack"
-version = "0.1.0"
+name = "sazgar"
+version = "0.2.0"
 edition = "2021"
+description = "DuckDB extension for comprehensive system monitoring - CPU, RAM, OS, processes, network, battery, and more"
+authors = ["Angelerator"]
 
 [lib]
 crate-type = ["cdylib"]
@@ -15,11 +17,12 @@ strip = true
 # src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
 # (that is needed while compiling natively) to staticlib (needed since the
 # actual linking will be done via emcc
-name = "rusty_quack"
+name = "sazgar"
 path = "src/wasm_lib.rs"
 crate-type = ["staticlib"]
 
 [dependencies]
-duckdb = { version = "1.4.2", features = ["vtab-loadable"] }
-duckdb-loadable-macros = "0.1.12"
-libduckdb-sys = { version = "1.4.2", features = ["loadable-extension"] }
+duckdb = { version = "1.4.3", features = ["vtab-loadable"] }
+duckdb-loadable-macros = "0.1.13"
+libduckdb-sys = { version = "1.4.3", features = ["loadable-extension"] }
+sysinfo = "0.32"
